--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ doc
 .bundle
 # jeweler generated
 pkg
-
+tweelog*
 # Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore: 
 #
 # * Create a file at ~/.gitignore
